--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,7 @@
 
 @import "reset";
 @import "variables";
+@import url('https://fonts.googleapis.com/css?family=Merriweather:300');
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
@@ -66,6 +67,8 @@ h4 {
 
 p {
   margin: 15px 0;
+  font-family: 'Merriweather', serif;
+  line-height: 1.2
 }
 
 a {
