--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,7 @@
 
 @import "reset";
 @import "variables";
-@import url('https://fonts.googleapis.com/css?family=Merriweather:300');
+@import url('https://fonts.googleapis.com/css?family=Lato');
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
@@ -67,8 +67,8 @@ h4 {
 
 p {
   margin: 15px 0;
-  font-family: 'Merriweather', serif;
-  line-height: 1.2;
+  font-family: 'Lato', sans-serif;
+  line-height: 1.6;
 }
 
 a {
